--- a/popup.html
+++ b/popup.html
@@ -79,6 +79,8 @@
 <div id="demo1">
             <a href="./help.html">使用教程</a>
         </div>
+            <p>插件官网:https://yqmmkingdom.github.io/Baidu-upload-image-API-plug-in/</p>
+            <p>目前版本2.0.0</p>
 
 <p>警告⚠️本项目仅供学习使用，请在24小时内删除！</p>
 <hi>json获取的链接处理工具</hi>
